feat: adding plain text resume && config. Removing secrets.yaml

--- a/data_folder/plain_text_resume.yaml
+++ b/data_folder/plain_text_resume.yaml
@@ -1,101 +1,160 @@
 personal_information:
-  name: "[Your Name]"
-  surname: "[Your Surname]"
-  date_of_birth: "[DD/MM/YYYY]"
-  country: "[Your Country]"
-  city: "[Your City]"
-  address: "[Your Address]"
-  phone_prefix: "[Your Phone Prefix]"
-  phone: "[Your Phone Number]"
-  email: "[Your Email Address]"
-  github: "[Your GitHub Profile URL]"
-  linkedin: "[Your LinkedIn Profile URL]"
+  name: "Zachary"
+  surname: "Petersen"
+  date_of_birth: "08/09/1995"
+  country: "United States"
+  city: "Salt Lake City"
+  address: "359 N 700 W"
+  phone_prefix: "+1"
+  phone: "3854045953"
+  email: "zpetersen78@gmail.com"
+  github: "https://github.com/zackcpetersen/"
+  linkedin: "https://www.linkedin.com/in/zackcpetersen/"
 
 education_details:
-  - degree: "[Your Degree]"
-    university: "[Your University]"
-    gpa: "[Your GPA]"
-    graduation_year: "[Year of Graduation]"
-    field_of_study: "[Your Field of Study]"
+  - degree: "Bachelor Of Science"
+    university: "University of Utah"
+    gpa: "3.6"
+    graduation_year: "2017"
+    field_of_study: "Business"
     exam:
-      [Course Name 1]: "[Grade]"
-      [Course Name 2]: "[Grade]"
-      [Course Name 3]: "[Grade]"
-      [Course Name 4]: "[Grade]"
-      [Course Name 5]: "[Grade]"
 
 experience_details:
-  - position: "[Your Job Title]"
-    company: "[Company Name]"
-    employment_period: "[Start Date] - [End Date]"
-    location: "[Location]"
-    industry: "[Industry]"
+  - position: "Senior Software Engineer"
+    company: "Merit International Inc"
+    employment_period: "June 2022 - Present"
+    location: "Salt Lake City, Utah - Remote"
+    industry: "Technology, Information and Internet"
     key_responsibilities:
-      - responsibility_1: "[Key Responsibility 1]"
-      - responsibility_2: "[Key Responsibility 2]"
-      - responsibility_3: "[Key Responsibility 3]"
+      - "Scaled Core Services: Successfully scaled critical features including user authentication, notifications, data ingestion, and graph management in core Go microservices from initial deployment to a user base exceeding 250,000."
+      - "Testing & Security: Bolstered system reliability by expanding test coverage 60% across all services, while fortifying platform security through comprehensive OAuth implementation and end-to-end encryption."
+      - "External Integrations: Spearheaded development of a comprehensive integration framework, incorporating services like Snowflake / Fivetran. Designed a high-performance system that synchronizes >3 million data entries per day."
+      - "System Optimization & Growth: Transformed the Notifications microservice from prototype to robust production infrastructure, architecting a scalable solution capable of dispatching millions of daily communications."
     skills_acquired:
-      - "[Skill 1]"
-      - "[Skill 2]"
-      - "[Skill 3]"
+      - "Go"
+      - "Python"
+      - "Microservices"
+      - "Kafka"
+      - "SQL"
+      - "Data Integrations"
+      - "Terraform"
+      - "GCP"
+      - "DataDog"
+      - "CI/CD"
+      - "OAuth"
+      - "Kubernetes"
+  - position: "Software Engineer III"
+    company: "Neutron Interactive"
+    employment_period: "May 2021 - June 2022"
+    location: "Salt Lake City, Utah"
+    industry: "Advertising Services"
+    key_responsibilities:
+      - "Team Expansion & Leadership: Recruited, onboarded, and guided two junior engineers, enabling strategic focus on system architecture and development. Fostered a collaborative environment, accelerating team productivity."
+      - "Cloud-Native Deployment: Architected and built AWS ECS infrastructure, facilitating streamlined container orchestration for the SaaS platform, improving resource utilization, and streamlining deployment processes."
+      - "Streamlined Release Cycle: Created GitHub Actions-based CI/CD pipelines, slashing deployment times by 75% and enhancing overall development efficiency - reducing manual intervention and potential errors in the system."
+      - "Infrastructure Modernization: Transitioned from manual AWS console management to comprehensive Terraform-based Infrastructure as Code (IaC), ensuring consistent and version-controlled resource provisioning."
+    skills_acquired:
+      - "Python"
+      - "GitHub Actions"
+      - "Management"
+      - "Django"
+      - "Django REST Framework"
+      - "Docker"
+      - "AWS"
+      - "Terraform"
+      - "CI/CD"
+      - "SQL"
+  - position: "Software Engineer II"
+    company: "Neutron Interactive"
+    employment_period: "May 2020 - May 2021"
+    location: "Salt Lake City, Utah"
+    industry: "Advertising Services"
+    key_responsibilities:
+      - "System Containerization: Spearheaded backend system overhaul, transitioning from legacy architecture to a containerized deployment leveraging cutting-edge technologies like Terraform and Docker."
+      - "Revenue-Driving Functionality: Engineered and established 10 pivotal features for the SaaS platform, including the primary matching algorithm responsible for generating over 75% of company revenue."
+      - "Quality Assurance Enhancement: Developed comprehensive unit and integration test suites, achieving over 80% code coverage across the entire system, ensuring robust and reliable software delivery.- System Containerization: Spearheaded backend system overhaul, transitioning from legacy architecture to a containerized deployment leveraging cutting-edge technologies like Terraform and Docker. - Revenue-Driving Functionality: Engineered and established 10 pivotal features for the SaaS platform, including the primary matching algorithm responsible for generating over 75% of company revenue. - Quality Assurance Enhancement: Developed comprehensive unit and integration test suites, achieving over 80% code coverage across the entire system, ensuring robust and reliable software delivery."
+    skills_acquired:
+      - "Python"
+      - "Automation"
+      - "SaaS"
+      - "Django"
+      - "Django REST Framework"
+      - "Docker"
+      - "AWS"
+      - "Terraform"
+      - "SQL"
+  - position: "Software Engineer I"
+    company: "Neutron Interactive"
+    employment_period: "May 2019 - May 2020"
+    location: "Salt Lake City, Utah"
+    industry: "Advertising Services"
+    key_responsibilities:
+      - "Query Performance Enhancement: Optimized database interactions with query optimizations, reducing roundtrips and boosting overall site responsiveness by up to 50%, significantly improving user experience and reducing server load."
+      - "Revenue-Driving Development: Collaborated closely with product and sales to conceptualize and implement key features for flagship software product, driving a 15%+ increase in revenue and expanding market opportunities."
+    skills_acquired:
+      - "Python"
+      - "Google Apps Script"
+      - "JavaScript"
+      - "Bash Scripting"
+      - "Test Automation"
+      - "Django"
+      - "Django REST Framework"
+      - "AWS"
+      - "SQL"
 
 projects:
-  - name: "[Project Name]"
-    description: "[Brief Description of the Project]"
-    link: "[Project URL]"
-  - name: "[Project Name]"
-    description: "[Brief Description of the Project]"
-    link: "[Project URL]"
+  - name: "Intelligent Code Review Assistant"
+    description: "Self-operating system triggered by GitHub pull requests, leveraging AI to analyze code diffs and generate PR reviews with actionable suggestions, streamlining the code review process."
+    link: "https://github.com/zackcpetersen/ai-code-reviewer"
+  - name: "Timecard: Employee Time Tracking Solution"
+    description: "Full-stack web application that enhances employee time tracking. This solution reduced managerial overhead by 2-3 hours weekly, features geolocation, data exports, and tiered access controls. Adopted by a local construction firm, it has processed over 30,000 entries since May 2021, demonstrating scalability and reliability in a production environment."
+    link: "https://github.com/zackcpetersen/timecard"
+  - name: "Personal Portfolio"
+    description: "Personal website showcasing projects & skills while optimizing for scalability/performance/autonomous management."
+    link: "https://github.com/zackcpetersen/portfolio-backend"
 
 achievements:
-  - name: "[Achievement Title]"
-    description: "[Brief Description of the Achievement]"
-  - name: "[Achievement Title]"
-    description: "[Brief Description of the Achievement]"
-
-certifications:
-  - "[Certification Name]"
+  - name: "Hackathon Winner"
+    description: "Took second place in the 2024 Merit Hackathon, integrating our credentials with the W3C standard"
 
 languages:
-  - language: "[Language Name]"
-    proficiency: "[Proficiency Level]"
-  - language: "[Language Name]"
-    proficiency: "[Proficiency Level]"
+  - language: "English"
+    proficiency: "Fluent"
 
 interests:
-  - "[Interest 1]"
-  - "[Interest 2]"
-  - "[Interest 3]"
-  - "[Interest 4]"
-  - "[Interest 5]"
+  - "LangChain"
+  - "LLM Automation"
+  - "Backend Development"
+  - "Open Source Projects"
+  - "Entrepreneurship"
 
 availability:
-  notice_period: "[Notice Period]"
+  notice_period: "2 weeks"
 
 salary_expectations:
-  salary_range_usd: "[Expected Salary Range in USD]"
+  salary_range_usd: "170000 - 200000"
 
 self_identification:
-  gender: "[Gender]"
-  pronouns: "[Pronouns]"
-  veteran: "[Veteran Status]"
-  disability: "[Disability Status]"
-  ethnicity: "[Ethnicity]"
+  gender: "Male"
+  pronouns: "He/Him"
+  veteran: "No"
+  disability: "No"
+  ethnicity: "White"
 
 legal_authorization:
-  eu_work_authorization: "[Yes/No]"
-  us_work_authorization: "[Yes/No]"
-  requires_us_visa: "[Yes/No]"
-  requires_us_sponsorship: "[Yes/No]"
-  requires_eu_visa: "[Yes/No]"
-  legally_allowed_to_work_in_eu: "[Yes/No]"
-  legally_allowed_to_work_in_us: "[Yes/No]"
-  requires_eu_sponsorship: "[Yes/No]"
+  eu_work_authorization: "No"
+  us_work_authorization: "Yes"
+  requires_us_visa: "No"
+  requires_us_sponsorship: "No"
+  requires_eu_visa: "No"
+  legally_allowed_to_work_in_eu: "No"
+  legally_allowed_to_work_in_us: "Yes"
+  requires_eu_sponsorship: "No"
 
 work_preferences:
-  remote_work: "[Yes/No]"
-  in_person_work: "[Yes/No]"
-  open_to_relocation: "[Yes/No]"
-  willing_to_complete_assessments: "[Yes/No]"
-  willing_to_undergo_drug_tests: "[Yes/No]"
-  willing_to_undergo_background_checks: "[Yes/No]"
+  remote_work: "Yes"
+  in_person_work: "No"
+  open_to_relocation: "No"
+  willing_to_complete_assessments: "Yes"
+  willing_to_undergo_drug_tests: "No"
+  willing_to_undergo_background_checks: "Yes"
