--- a/data_folder/config.yaml
+++ b/data_folder/config.yaml
@@ -1,42 +1,46 @@
-remote: [true/false]
+remote: true
 
 experienceLevel:
- internship: [true/false]
- entry: [true/false]
- associate: [true/false]
- mid-senior level: [true/false]
- director: [true/false]
- executive: [true/false]
+ internship: false
+ entry: false
+ associate: false
+ mid-senior level: true
+ director: false
+ executive: false
 
 jobTypes:
- full-time: [true/false]
- contract: [true/false]
- part-time: [true/false]
- temporary: [true/false]
- internship: [true/false]
- other: [true/false]
- volunteer: [true/false]
+ full-time: true
+ contract: false
+ part-time: false
+ temporary: false
+ internship: false
+ other: false
+ volunteer: false
 
 date:
- all time: [true/false]
- month: [true/false]
- week: [true/false]
- 24 hours: [true/false]
+ all time: false
+ month: false
+ week: false
+ 24 hours: true
 
 positions:
-  - position1
-  - position2
+  - Senior Software Engineer
+  - Senior Backend Engineer
+  - Senior Software Developer
 
 locations:
-  - Country1
-  - Country2
+  - United States
 
-distance: 100
+distance: 1000
 
 companyBlacklist:
-  - Company1
-  - Company2
 
 titleBlacklist:
-  - word1
-  - word2
+  - Fullstack
+  - Full-stack
+  - Full Stack
+  - Frontend
+  - Front-end
+  - Front End
+  - Test
+  - DevOps
